feat: add rolling average baseline
Calculate baseline from the rolling average of recent historical results
instead of using only the most recent result. This provides more stable
regression detection by smoothing out noise from individual runs.

New input:
- rolling_window: Number of historical results to average (default: 5)

The baseline calculation requires at least 2 historical results.
If fewer are available, the most recent result is used as fallback.

--- a/action.yml
+++ b/action.yml
@@ -48,6 +48,10 @@ inputs:
     description: "Memory usage threshold (0-1) above which to emit warning"
     required: false
     default: "0.80"
+  rolling_window:
+    description: "Number of historical results to average for baseline"
+    required: false
+    default: "5"
 
 outputs:
   has_regression:
@@ -98,11 +102,14 @@ runs:
     - name: Store results
       if: inputs.store_results == 'true'
       shell: bash
+      env:
+        RESULTS_DIR: ${{ inputs.results_dir }}
+        ROLLING_WINDOW: ${{ inputs.rolling_window }}
       run: |
         mkdir -p "${{ inputs.results_dir }}"
         TIMESTAMP=$(date -u +%Y%m%dT%H%M%S)
         cp "${{ inputs.results_file }}" "${{ inputs.results_dir }}/${TIMESTAMP}.json"
-        cp "${{ inputs.results_file }}" "${{ inputs.results_dir }}/baseline.json"
+        python3 ${{ github.action_path }}/scripts/calculate_rolling_baseline.py
 
     - name: Send Slack alert
       if: failure() || steps.regression.outputs.has_regression == 'true'
