--- a/action.yml
+++ b/action.yml
@@ -132,12 +132,22 @@ runs:
       shell: bash
       env:
         RESULTS_DIR: ${{ inputs.results_dir }}
+        RESULTS_FILE: ${{ inputs.results_file }}
         ROLLING_WINDOW: ${{ inputs.rolling_window }}
       run: |
-        mkdir -p "${{ inputs.results_dir }}"
+        mkdir -p "$RESULTS_DIR"
         TIMESTAMP=$(date -u +%Y%m%dT%H%M%S)
-        cp "${{ inputs.results_file }}" "${{ inputs.results_dir }}/${TIMESTAMP}.json"
+        cp "$RESULTS_FILE" "$RESULTS_DIR/${TIMESTAMP}.json"
         python3 ${{ github.action_path }}/scripts/calculate_rolling_baseline.py
+
+        # Push benchmark data so the dashboard can collect it via API.
+        git config user.name "github-actions[bot]"
+        git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git add "$RESULTS_DIR"
+        if [[ -n $(git status --porcelain) ]]; then
+          git commit -m "chore: store benchmark results [skip ci]"
+          git push
+        fi
 
     - name: Send Slack alert
       if: failure() || steps.regression.outputs.has_regression == 'true'
