fix(alert): handle missing results file in slack notification
When the benchmark command crashes, the results JSON file does not exist
but send_slack_alert.py unconditionally opens it, causing the alert step
itself to crash silently. This means no Slack notification is sent on
benchmark failures — the exact scenario where alerts are most needed.

Also adds cancelled() to the step condition so cancellations trigger
alerts too.

--- a/action.yml
+++ b/action.yml
@@ -167,11 +167,12 @@ runs:
       run: python3 ${{ github.action_path }}/scripts/push_to_dashboard.py
 
     - name: Send Slack alert
-      if: failure() || steps.regression.outputs.has_significant_change == 'true'
+      if: failure() || cancelled() || steps.regression.outputs.has_significant_change == 'true'
       shell: bash
       env:
         SLACK_WEBHOOK_URL: ${{ inputs.slack_webhook }}
         RESULTS_FILE: ${{ inputs.results_file }}
+        IMPLEMENTATION: ${{ inputs.implementation }}
         GITHUB_SERVER_URL: ${{ github.server_url }}
         GITHUB_REPOSITORY: ${{ github.repository }}
         GITHUB_RUN_ID: ${{ github.run_id }}
